debug action workflow
Signed-off-by: Colin McCullough <cmccullough@microsoft.com>

--- a/.github/workflows/ci-api.yml
+++ b/.github/workflows/ci-api.yml
@@ -3,13 +3,13 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'apis/**'
+    # paths:
+    #   - 'apis/**'
   pull_request:
     branches:
       - main
-    paths:
-      - 'apis/**'
+    # paths:
+    #   - 'apis/**'
 
 jobs:
   get_api_folder:
