--- a/.github/workflows/ci-api.yml
+++ b/.github/workflows/ci-api.yml
@@ -1,18 +1,14 @@
+# TODO: parameterize and make re-usable 
 name: CI - Deploy API Changes
 on:
   push:
     branches:
       - main
-    # paths:
-    #   - 'apis/**'
-  pull_request:
-    branches:
-      - main
-    # paths:
-    #   - 'apis/**'
-
+    paths:
+      - 'apis/**'
+    
 jobs:
-  # TODO: extract into GH template
+  # Modified version of Azure's sample repo: https://github.com/Azure/azure-quickstart-templates/blob/master/.github/workflows/auto-fix.yml
   get_api_folder:
     runs-on: ubuntu-latest
     outputs:
@@ -53,10 +49,12 @@ jobs:
           fi
           echo "::set-output name=apiFolderPath::$FOUNDFOLDER_PATH"
           echo "::set-output name=mainBicepPath::$MAINBICEP_PATH"
+  
   validate_bicep:
     name: "Validate Bicep files"
     needs: get_api_folder
     runs-on: ubuntu-latest
+    environment: Prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -65,24 +63,44 @@ jobs:
         run: az bicep build -f main.bicep
         working-directory: ${{ needs.get_api_folder.outputs.apiFolderPath }}
 
-  # deployment:
-  #   runs-on: ubuntu-latest
-  #   needs: changed_files
-  #   environment: Prod
-  #   steps:
-  #     - uses: azure/login@v1
-  #       with:
-  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
-  #     - name: deploy
-  #       uses: azure/arm-deploy@v1
-  #       with:
-  #         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-  #         scope: subscription
-  #         region: ${{ fromJson(env.config).AZURE_LOCATION }}
-  #         template: ./reference-implementations/AppGW-IAPIM-Func/bicep/main.bicep
-  #         parameters: > 
-  #           workloadName=${{ fromJson(env.config).RESOURCE_NAME_PREFIX }} environment=${{ fromJson(env.config).ENVIRONMENT_TAG }} 
-  #           vmUsername=${{ fromJson(env.config).VM_USERNAME }} vmPassword=${{ secrets.VM_PW }} 
-  #           accountName=${{ secrets.ACCOUNT_NAME }} personalAccessToken=${{ secrets.PAT }} CICDAgentType=${{ fromJson(env.config).CICD_AGENT_TYPE}}
-  #           appGatewayFqdn=${{ secrets.FQDN }} certificatePassword=${{ secrets.CERTPW }} appGatewayCertType=${{ fromJson(env.config).CERT_TYPE }}
+  deployment:
+    name: "Deploy API Bicep files"
+    runs-on: ubuntu-latest
+    needs: 
+      - get_api_folder
+      - validate_bicep
+    environment: Prod
+    steps:
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Deploy API Revisions
+        uses: azure/arm-deploy@v1
+        with:
+          resourceGroupName: ${{ secrets.AZURE_RESOURCE_GROUP }}
+          template: ${{ needs.get_api_folder.outputs.mainBicepPath }}
+          parameters: apimServiceName=${{ secrets.AZURE_APIM_NAME }}
+
+          # NOTE: Parameter JSON files are currently not used. 
+          # API configuration's are kept in Github secrets and passed in.
+          # parameters: ${{ needs.get_api_folder.outputs.apiFolderPath }}/params.prod.json
+
+          # Example of parameters from: https://github.com/Azure/apim-landing-zone-accelerator/blob/workflow-new/.github/workflows/es-apim.yml
+          # parameters: > 
+          #   workloadName=${{ fromJson(env.config).RESOURCE_NAME_PREFIX }} environment=${{ fromJson(env.config).ENVIRONMENT_TAG }} 
+          #   vmUsername=${{ fromJson(env.config).VM_USERNAME }} vmPassword=${{ secrets.VM_PW }} 
+          #   accountName=${{ secrets.ACCOUNT_NAME }} personalAccessToken=${{ secrets.PAT }} CICDAgentType=${{ fromJson(env.config).CICD_AGENT_TYPE}}
+          #   appGatewayFqdn=${{ secrets.FQDN }} certificatePassword=${{ secrets.CERTPW }} appGatewayCertType=${{ fromJson(env.config).CERT_TYPE }}
+
+        # Reference: https://github.com/marketplace/actions/azure-login#az-logout-and-security-hardening
+      - name: Azure logout
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az logout
+            az cache purge
+            az account clear
