--- a/.github/workflows/publish-api.yml
+++ b/.github/workflows/publish-api.yml
@@ -3,21 +3,19 @@ name: Publish API
 on:
   workflow_call:
     inputs:
-      environment:
-        type: string
-        required: true
       main_bicep_file:
         type: string
         required: true
+  workflow_dispatch:
 
 permissions:
   id-token: write
   contents: read
 
+
 jobs:
   main:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
