--- a/.github/workflows/on-push-main-apis.yml
+++ b/.github/workflows/on-push-main-apis.yml
@@ -1,5 +1,5 @@
 # TODO: parameterize and make re-usable 
-name: Publish API Changes
+name: Publish API Changes to Prod
 on:
   push:
     branches:
@@ -33,5 +33,11 @@ jobs:
     with:
       main_bicep_file: ${{ needs.get_api_to_publish.outputs.main_bicep_file }}
       environment: Prod
+    secrets:
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+
+      
 
     
