--- a/.github/workflows/on-push-dev-apis.yml
+++ b/.github/workflows/on-push-dev-apis.yml
@@ -24,6 +24,7 @@ jobs:
         run: az bicep build -f main.bicep
         working-directory: ${{ needs.get_api_to_publish.outputs.api_dir }}
 
+  # https://github.com/actions/runner/issues/1490
   publish_api:
     name: "Publish API to Dev"
     uses: ./.github/workflows/publish-api.yml
@@ -32,5 +33,10 @@ jobs:
       - validate_bicep
     with:
       main_bicep_file: ${{ needs.get_api_to_publish.outputs.main_bicep_file }}
-
-    
+      environment: Dev
+    secrets:
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE_APIM_RG: ${{ secrets.AZURE_APIM_RG }}
+      AZURE_APIM_NAME: ${{ secrets.AZURE_APIM_NAME }}
