--- a/.github/workflows/on-push-main-apis.yml
+++ b/.github/workflows/on-push-main-apis.yml
@@ -37,3 +37,5 @@ jobs:
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE_APIM_RG: ${{ secrets.AZURE_APIM_RG }}
+      AZURE_APIM_NAME: ${{ secrets.AZURE_APIM_NAME }}
