--- a/.github/workflows/on-push-dev-apis.yml
+++ b/.github/workflows/on-push-dev-apis.yml
@@ -10,6 +10,7 @@ on:
     
 jobs:
   get_api_to_publish:
+    name: "Get API to publish"
     uses: ./.github/workflows/get-changed-api.yml
 
   validate_bicep:
