testing workflows dev
Signed-off-by: Colin McCullough <cmccullough@microsoft.com>

--- a/.github/workflows/get-changed-api.yml
+++ b/.github/workflows/get-changed-api.yml
@@ -20,7 +20,7 @@ jobs:
       main_bicep_file: ${{ steps.apiInfo.outputs.mainBicepPath }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Find changed API
         id: apiInfo
@@ -30,7 +30,7 @@ jobs:
           pwd
           cd $GITHUB_WORKSPACE
           pwd
-          LAST_PATH=$( git log --pretty="" --name-only -n 100 origin/main -- apis/**/* | grep -v ".github\|.devcontainer\|common-bicep" | head -1 )
+          LAST_PATH=$( git log --pretty="" --name-only -n 100 origin/$GITHUB_REF_NAME -- apis/**/* | grep -v ".github\|.devcontainer\|common-bicep" | head -1 )
           echo Last file modified: $LAST_PATH
           # Look for the main template file in this file's path or parents
           APIFOLDER_PATH=$( dirname "$LAST_PATH" )
