--- a/.github/workflows/on-push-main-apis.yml
+++ b/.github/workflows/on-push-main-apis.yml
@@ -1,4 +1,3 @@
-# TODO: parameterize and make re-usable 
 name: Publish API Changes to Staging/Prod
 on:
   push:
@@ -9,15 +8,27 @@ on:
   workflow_dispatch:
     
 jobs:
+  validate_bicep:
+    name: "Validate Bicep files"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Validate that bicep builds
+        run: az bicep build -f main.bicep
+        working-directory: apis
+
+  # Environment doesn't need reviewers, but PR's to `main` do
   publish_all_staging:
     name: "Publish API's to Staging"
-    uses: ./.github/workflows/publish-api.yml
+    uses: ./.github/workflows/deploy-bicep.yml
     with:
       main_bicep_file: apis/main.bicep
-      environment: Staging
+      workflow_environment: Staging
     secrets:
       # https://github.com/actions/runner/issues/1490
-      # These are actually comming in from the environment, but
+      # These are actually coming in from the environment, but
       # need to be referenced here due to this bug
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -25,17 +36,17 @@ jobs:
       AZURE_APIM_RG: ${{ secrets.AZURE_APIM_RG }}
       AZURE_APIM_NAME: ${{ secrets.AZURE_APIM_NAME }}
 
+  # Requires reviewers for Environment
   publish_all_prod:
     name: "Publish API's to Prod"
-    uses: ./.github/workflows/publish-api.yml
+    uses: ./.github/workflows/deploy-bicep.yml
     needs: publish_all_staging
     with:
       main_bicep_file: apis/main.bicep
-      environment: Prod
-      parameters: apimServiceName=${{ secrets.AZURE_APIM_NAME }}
+      workflow_environment: Prod
     secrets:
       # https://github.com/actions/runner/issues/1490
-      # These are actually comming in from the environment, but
+      # These are actually coming in from the environment, but
       # need to be referenced here due to this bug
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
