--- a/apis/financial-accounts-mgmt/v1/rev2/open-api.yaml
+++ b/apis/financial-accounts-mgmt/v1/rev2/open-api.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: Oink Account Management API (Beta)
+  title: Oink Account Management API
   version: 1.1.0
 servers:
   - url: https://localhost:7071/api
